# convex_area

./: CMakeLists.txt
src/: main.cpp
